<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".test.MainActivity2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".test.MainActivity">

        <TextView
            android:id="@+id/nomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_nom"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/prenomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_prenom"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/phoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_phone"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/genreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_genre"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/adresseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_adresse"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/villeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_ville"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
